[package]
name = "euler"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]

[[bin]]
name = "problem_001"
path = "src/problem_001.rs"

[[bin]]
name = "problem_002"
path = "src/problem_002.rs"

[[bin]]
name = "problem_003_largest_prime_factor"
path = "src/problem_003_largest_prime_factor.rs"

[dependencies]
